<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ProyectoFinalL6</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_title">Bienvenido de nuevo</string>
    <string name="login_subtitle">Inicia sesión para gestionar tus turnos.</string>
    <string name="login_email_label">Email</string>
    <string name="login_email_hint">ejemplo@email.com</string>
    <string name="login_password_label">Contraseña</string>
    <string name="login_forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="login_password_hint">Ingresa tu contraseña</string>
    <string name="login_remember_me">Recordar mi sesión</string>
    <string name="login_button">Ingresar</string>
    <string name="login_no_account">¿No tienes una cuenta? </string>
    <string name="login_register_here">Regístrate aquí</string>

    <!-- Registro parte 1 -->
    <string name="register_title_pt1">Crea tu cuenta</string>
    <string name="register_subtitle_pt1">Regístrate para gestionar tus turnos</string>
    <string name="register_name_label">Nombre</string>
    <string name="register_name_hint">Ingresa tu nombre</string>
    <string name="register_lastname_label">Apellido</string>
    <string name="register_lastname_hint">Ingresa tu apellido</string>
    <string name="register_phone_label">Teléfono</string>
    <string name="register_phone_hint">Ingresa tu teléfono</string>
    <string name="register_email_label">Email</string>
    <string name="register_email_hint_pt1">ejemplo@email.com</string>
    <string name="register_password_label">Contraseña</string>
    <string name="register_password_hint_pt1">Crea una contraseña segura</string>
    <string name="register_password_repeat_label">Repite tu contraseña</string>
    <string name="register_password_repeat_hint_pt1">Confirma tu contraseña</string>
    <string name="register_next_button">Siguiente</string>

    <!-- Registro parte 2 -->
    <string name="register_title_pt2">Crea tu cuenta</string>
    <string name="register_step_2_of_2">Paso 2 de 2</string>
    <string name="register_subtitle_pt2">Unos datos más y terminamos</string>
    <string name="register_dni_label">DNI</string>
    <string name="register_dni_hint">Ingresa tu DNI sin puntos</string>
    <string name="register_address_label">Dirección</string>
    <string name="register_address_hint">Ingresa tu dirección</string>
    <string name="register_coverage_label">Coberturas</string>
    <string name="register_coverage_prompt">Seleccione una o mas opciones</string>
    <string name="register_button">Registrar</string>

    <!-- Nav -->
    <string name="title_home">Inicio</string>
    <string name="title_profile">Mi perfil</string>
    <string name="title_hc">Historia clinica</string>
    <string name="title_about">Sobre nosotros</string>

    <!-- Sobre nosotros -->
    <string name="about_location_title">Nuestra ubicación</string>
    <string name="about_location_placeholder">Google maps</string>
    <string name="about_professionals">Nuestro equipo</string>
    <string name="about_professionals_desc">Conoce a nuestro equipo.
        Contamos con un equipo de profesionales comprometidos
        con tu salud bucal. </string>

    <!-- Perfil -->
    <string name="profile_avatar_description">Avatar</string>
    <string name="profile_username">Nombre de usuario</string>
    <string name="profile_email_placeholder">usuario@email.com</string>
    <string name="profile_edit_info">Editar Información</string>
    <string name="profile_personal_info">Información Personal</string>
    <string name="profile_name_label">Nombre</string>
    <string name="profile_lastname_label">Apellidos</string>
    <string name="profile_dni_label">DNI</string>
    <string name="profile_contact_info">Información de Contacto</string>
    <string name="profile_phone_label">Teléfono</string>
    <string name="profile_address_label">Dirección</string>
    <string name="profile_logout">Cerrar sesion</string>
    <string name="profile_name_hint">Ingresa tu nombre</string>
    <string name="profile_lastname_hint">Ingresa tu apellido</string>
    <string name="profile_dni_hint">Ingresa tu DNI</string>
    <string name="profile_phone_hint">Ingresa tu teléfono</string>
    <string name="profile_address_hint">Ingresa tu dirección</string>

    <!-- Reserva de turno-->
    <string name="reservar_nuevo_turno">Reservar nuevo turno</string>
    <string name="volver">Volver</string>
    <string name="siguiente">Siguiente</string>
    <string name="selecciona_una_opcion">Selecciona una opción</string>

    <!-- Fragmento paso 1-->
    <string name="maintext_paso1">Selecciona tu odontólogo</string>

    <!-- Fragmento paso 2-->
    <string name="maintext_paso2">Selecciona fecha y hora</string>
    <string name="horarios_disponibles">Horarios disponibles:</string>

    <!-- Fragmento paso 3-->
    <string name="maintext_paso3">Selecciona un motivo de consulta</string>

    <!-- Fragmento paso 4-->
    <string name="maintext_paso4">Selecciona una cobertura</string>
    <string name="ver_resumen">Ver resumen</string>

    <string name="confirmar_cita">Confirmar cita</string>
    <string name="horarios_para_el_dia_seleccionado">Horarios para el día seleccionado</string>

    <!-- Turno registrado-->
    <string name="titulo_reserva_exitosa">¡Turno reservado con éxito!</string>
    <string name="mensaje_detalles_correo">Hemos enviado los detalles a tu correo electrónico para
        que los tengas a mano.</string>
    <string name="boton_ver_turnos">Ver mis turnos</string>
    <string name="boton_volver_inicio">Volver al inicio</string>
    <string name="descripcion_reserva_exitosa">Icono de checkmark verde</string>
    <string name="volver_al_inicio">Volver al inicio</string>
    <string name="historia_clinica">Historia Clínica</string>

    <string name="nos_ayudas">¿Nos ayudas con tu reseña?</string>
    <string name="click_aqui">Haz clic aquí</string>
    <string name="tu_opinion_ayuda">Tu opinión nos ayuda a mejorar.</string>
    <string name="turno_valoracion_gracias">Gracias por tus comentarios, nos ayudan a mejorar</string>
    <string name="no_hay_turnos_programados">No hay turnos programados</string>
    <string name="proximos_turnos">Próximos Turnos</string>

    <string name="turno_cancelacion_fuera_de_horario">Los turnos solo se pueden cancelar hasta 3 horas antes.</string>


</resources>